--- a/src/main/java/com/planner/pages/CalendarUpdate.properties
+++ b/src/main/java/com/planner/pages/CalendarUpdate.properties
@@ -1,3 +1,6 @@
 updDescription-label=Opis
 updworkStart-label=Pocz\u0105tek pracy
 updworkEnd-label=Koniec pracy
+crtDescription-label=Opis
+crtWorkStart-label=Pocz\u0105tek pracy
+crtWorkEnd-label=Koniec pracy
