--- a/src/main/java/com/planner/pages/CreateEmployee.properties
+++ b/src/main/java/com/planner/pages/CreateEmployee.properties
@@ -2,3 +2,10 @@ M=M\u0119\u017Cczyzna
 F=Kobieta
 crtPos-label=Stanowisko
 crtSex-label=P\u0142e\u0107
+firstName-label=Imi\u0119 
+lastName-label=Nazwisko
+description-label=Opis
+update-label=Aktualizacja
+delete-label=Usu\u0144
+age-label=Wiek
+email-label=eMail
