--- a/src/main/resources/com/planner/pages/Index.properties
+++ b/src/main/resources/com/planner/pages/Index.properties
@@ -1,1 +1,6 @@
 greeting=Welcome to Tapestry 5!  We hope that this project template will get you going in style.
+hotelName-label=Nazwa hotelu
+description-label=Opis
+positions-label=Stanowiska
+employees-label=Pracownicy
+schedule-label=Grafik
