Dodane logowanie i tworzenie konta

--- a/src/main/resources/com/planner/pages/NewAccount.properties
+++ b/src/main/resources/com/planner/pages/NewAccount.properties
@@ -1,7 +1,9 @@
-sex-label=Plec
+sex-label=P\u0142\u0119\u0107
 age-label=Wiek
-firstname-label=Imie
+firstname-label=Imi\u0119
 lastname-label=Nazwisko
-MALE=Mezczyzna
-FEMALE=Kobieta
+M=M\u0119\u017Cczyzna
+F=Kobieta
 submit-label=Utworz
+password-label=Has\u0142o
+username-label=Nazwa u\u017Cytkownika
