--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
             <version>${slf4j-release-version}</version>
         </dependency>
 
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.9</version>
+		</dependency>
 
         <dependency>
             <groupId>org.apache.tapestry</groupId>
