--- a/src/main/resources/com/planner/pages/Positions.properties
+++ b/src/main/resources/com/planner/pages/Positions.properties
@@ -1,5 +1,5 @@
 firstName-label=Imi\u0119 
 lastName-label=Nazwisko
 description-label=Opis
-update-label=Aktualizacja
+update-label=Edycja
 delete-label=Usu\u0144
