--- a/src/main/resources/com/planner/pages/AddEmpToCal.properties
+++ b/src/main/resources/com/planner/pages/AddEmpToCal.properties
@@ -2,3 +2,5 @@ employeeMenu-label=Imi\u0119 i nazwisko pracownika
 crtWorkStart-label=Pocz\u0105tek pracy
 crtWorkEnd-label=Koniec pracy
 crtDescription-label=Opis
+save-label=Zapisz
+description-label=Opis
