--- a/src/main/resources/com/planner/pages/Index.properties
+++ b/src/main/resources/com/planner/pages/Index.properties
@@ -4,3 +4,9 @@ description-label=Opis
 positions-label=Stanowiska
 employees-label=Pracownicy
 schedule-label=Grafik
+username=login
+password=has\u0142o
+remember.me=Zapami\u0119taj mnie
+login=Zaloguj
+back=Powrot
+click.here=Utworz konto...
