Changes to translations
Changed some translations, and "Cancel" redirection from CalendarUpdate

--- a/src/main/resources/com/planner/pages/CalendarUpdate.properties
+++ b/src/main/resources/com/planner/pages/CalendarUpdate.properties
@@ -2,3 +2,4 @@ crtWorkStart-label=Pocz\u0105tek pracy
 crtWorkEnd-label=Koniec pracy
 crtDescription-label=Opis
 description-label=Opis
+cancel=Powrot
