--- a/src/main/resources/com/planner/pages/Positions.properties
+++ b/src/main/resources/com/planner/pages/Positions.properties
@@ -3,3 +3,4 @@ lastName-label=Nazwisko
 description-label=Opis
 update-label=Edycja
 delete-label=Usu\u0144
+empty=Brak pracownikow na tym stanowisku
