--- a/src/main/resources/com/planner/pages/UpdateEmployee.properties
+++ b/src/main/resources/com/planner/pages/UpdateEmployee.properties
@@ -5,7 +5,7 @@ update-label=Aktualizacja
 delete-label=Usu\u0144
 age-label=Wiek
 updSex-label=P\u0142e\u0107
-email-label=eMail
+email-label=Dane osobowe
 updPos-label=Stanowisko
 M=M\u0119\u017Cczyzna
 F=Kobieta
