--- a/src/main/resources/com/planner/pages/Index.properties
+++ b/src/main/resources/com/planner/pages/Index.properties
@@ -4,6 +4,7 @@ description-label=Opis
 positions-label=Stanowiska
 employees-label=Pracownicy
 schedule-label=Grafik
+delete-label=Usu\u0144
 username=login
 password=has\u0142o
 remember.me=Zapami\u0119taj mnie
