--- a/src/main/resources/com/planner/pages/CreateEmployee.properties
+++ b/src/main/resources/com/planner/pages/CreateEmployee.properties
@@ -3,7 +3,7 @@ lastName-label=Nazwisko
 age-label=Wiek
 crtSex-label=P\u0142e\u0107
 description-label=Opis
-email-label=eMail
+email-label=Dane osobowe
 crtPos-label=Stanowisko
 M=M\u0119\u017Cczyzna
 F=Kobieta
