--- a/src/main/resources/com/planner/pages/Positions.properties
+++ b/src/main/resources/com/planner/pages/Positions.properties
@@ -4,3 +4,4 @@ description-label=Opis
 update-label=Edycja
 delete-label=Usu\u0144
 empty=Brak pracownikow na tym stanowisku
+positionDescr-label=Stanowisko
